Add /reasons API and connect to appointment
