# src/main/java/com/avimedical/appointments/scheduling/domain/model/Channel.java
@@ -1,5 +1,5 @@
 package com.avimedical.appointments.scheduling.domain.model;
 
 public enum Channel {
-    IN_PERSON,ONLINE
+    IN_PERSON, VIDEO_CALL
 }
