# src/main/java/com/avimedical/appointments/scheduling/domain/ports/ReasonRepository.java
@@ -1,0 +1,14 @@
+package com.avimedical.appointments.scheduling.domain.ports;
+
+import java.util.List;
+import java.util.Optional;
+
+import com.avimedical.appointments.scheduling.domain.model.Reason;
+
+public interface ReasonRepository {
+    Reason create(Reason reason);
+
+    List<Reason> getReasons();
+
+    Optional<Reason> find(String reasonId);
+}
